--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
 		"@angular/platform-browser": "^18.2.0",
 		"@angular/platform-browser-dynamic": "^18.2.0",
 		"@angular/router": "^18.2.0",
+		"angular-three": "^2.0.0-beta.315",
+		"ngxtension": "^4.0.0",
 		"rxjs": "~7.8.0",
+		"three": "^0.166.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.14.10"
 	},
@@ -25,6 +28,7 @@
 		"@angular-devkit/build-angular": "^18.2.1",
 		"@angular/cli": "^18.2.1",
 		"@angular/compiler-cli": "^18.2.0",
+		"@types/three": "^0.166.0",
 		"prettier": "^3.3.3",
 		"prettier-plugin-organize-imports": "^4.0.0",
 		"prettier-plugin-tailwindcss": "^0.6.6",
