--- a/angular.json
+++ b/angular.json
@@ -52,7 +52,10 @@
 							}
 						],
 						"styles": ["src/styles.css"],
-						"scripts": []
+						"scripts": [],
+						"loader": {
+							".glsl": "text"
+						}
 					},
 					"configurations": {
 						"production": {
