--- a/package.json
+++ b/package.json
@@ -1,56 +1,62 @@
 {
-	"name": "ngt-solar-system",
-	"version": "0.0.0",
-	"scripts": {
-		"ng": "ng",
-		"start": "ng serve",
-		"build": "ng build",
-		"watch": "ng build --watch --configuration development"
-	},
-	"private": true,
-	"dependencies": {
-		"@angular/animations": "^18.2.0",
-		"@angular/common": "^18.2.0",
-		"@angular/compiler": "^18.2.0",
-		"@angular/core": "^18.2.0",
-		"@angular/forms": "^18.2.0",
-		"@angular/platform-browser": "^18.2.0",
-		"@angular/platform-browser-dynamic": "^18.2.0",
-		"@angular/router": "^18.2.0",
-		"@monogrid/gainmap-js": "^3.0.0",
-		"@pmndrs/vanilla": "^1.19.0",
-		"angular-three": "^2.0.0-beta.315",
-		"angular-three-soba": "^2.0.0-beta.315",
-		"camera-controls": "^2.8.0",
-		"maath": "^0.10.0",
-		"ngxtension": "^4.0.0",
-		"rxjs": "~7.8.0",
-		"three": "^0.166.0",
-		"three-mesh-bvh": "^0.7.0",
-		"three-stdlib": "^2.0.0",
-		"troika-three-text": "^0.49.0",
-		"tslib": "^2.3.0",
-		"zone.js": "~0.14.10"
-	},
-	"devDependencies": {
-		"@angular-devkit/build-angular": "^18.2.1",
-		"@angular/cli": "^18.2.1",
-		"@angular/compiler-cli": "^18.2.0",
-		"@types/three": "^0.166.0",
-		"prettier": "^3.3.3",
-		"prettier-plugin-organize-imports": "^4.0.0",
-		"prettier-plugin-tailwindcss": "^0.6.6",
-		"tailwindcss": "^3.4.10",
-		"typescript": "~5.5.2"
-	},
-	"prettier": {
-		"useTabs": true,
-		"printWidth": 120,
-		"singleQuote": true,
-		"htmlWhitespaceSensitivity": "ignore",
-		"plugins": [
-			"prettier-plugin-organize-imports",
-			"prettier-plugin-tailwindcss"
-		]
-	}
+  "name": "ngt-solar-system",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "nx serve",
+    "build": "nx build",
+    "watch": "nx build --watch --configuration development"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^18.2.0",
+    "@angular/common": "^18.2.0",
+    "@angular/compiler": "^18.2.0",
+    "@angular/core": "^18.2.0",
+    "@angular/forms": "^18.2.0",
+    "@angular/platform-browser": "^18.2.0",
+    "@angular/platform-browser-dynamic": "^18.2.0",
+    "@angular/router": "^18.2.0",
+    "@monogrid/gainmap-js": "^3.0.0",
+    "@pmndrs/vanilla": "^1.19.0",
+    "angular-three": "^2.0.0-beta.315",
+    "angular-three-soba": "^2.0.0-beta.315",
+    "camera-controls": "^2.8.0",
+    "maath": "^0.10.0",
+    "ngxtension": "^4.0.0",
+    "rxjs": "~7.8.0",
+    "three": "^0.166.0",
+    "three-mesh-bvh": "^0.7.0",
+    "three-stdlib": "^2.0.0",
+    "troika-three-text": "^0.49.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.14.10"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^18.2.1",
+    "@angular-devkit/core": "^18.2.1",
+    "@angular-devkit/schematics": "^18.2.1",
+    "@angular/cli": "^18.2.1",
+    "@angular/compiler-cli": "^18.2.0",
+    "@nx/angular": "19.6.2",
+    "@nx/workspace": "19.6.2",
+    "@schematics/angular": "^18.2.1",
+    "@types/three": "^0.166.0",
+    "nx": "19.6.2",
+    "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "tailwindcss": "^3.4.10",
+    "typescript": "~5.5.2"
+  },
+  "prettier": {
+    "useTabs": true,
+    "printWidth": 120,
+    "singleQuote": true,
+    "htmlWhitespaceSensitivity": "ignore",
+    "plugins": [
+      "prettier-plugin-organize-imports",
+      "prettier-plugin-tailwindcss"
+    ]
+  }
 }
